testsuite/poke.pkl/funcall-vararg-diag-2.pk
/* { dg-do compile } */

defun foo = (args..., int a) int:  /* { dg-error ".*\n.*" } */
  {
   return args[0];
  }
